--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,4 @@
-<header>
-  <div id="search-bar">
-    <div class="container">
-      <div class="row">
-        <form action="#" name="search" class="col-xs-12">
-          <input vk_10e23="subscribed" name="search" placeholder="Type and Hit Enter" type="text">
-          <i id="search-close" class="fa fa-close"></i>
-        </form>
-      </div>
-    </div>
-  </div>
+{% include primary_nav.html %}
 
-  {% include primary_nav.html%}
-</header>
+{{!-- <header class="home-header">
+</header> --}}
