--- a/_sass/main/elements/_segment.scss
+++ b/_sass/main/elements/_segment.scss
@@ -1,16 +1,18 @@
-section .segment {
+.segment {
   min-height: 520px;
   padding: 100px 0 105px;
   background: $body-bg;
 }
 
-section .segment .title {
+.segment .title {
   text-align: center;
   margin-bottom: 2em;
   h2 {
     text-transform: uppercase;
     color: $body-color;
     margin-bottom: 10px;
+    font-weight: $headings-font-weight-heavy;
+    font-size: $font-size-xl;
   }
   h5 {
     display: inline-block;
@@ -19,6 +21,7 @@ section .segment .title {
     padding: 0 15px;
     font-size: 16px;
     color: $body-color-alt;
+    font-size: $font-size-base;
   }
 }
 
