--- a/_sass/main/modules/_module.scss
+++ b/_sass/main/modules/_module.scss
@@ -6,8 +6,8 @@
 // The biggest distiction between a Module and an Element is that Modules requires javascript to function
 // whereas an element can be styled on its own with no javascript.
 
-@import 'carousel';
-@import 'content-box';
+// @import 'carousel';
+// @import 'content-box';
 @import 'feature';
 @import 'parallax';
-@import 'countdown';
+// @import 'countdown';
