--- a/_includes/primary_nav.html
+++ b/_includes/primary_nav.html
@@ -1,50 +1,18 @@
-<nav class="navigation nav-scroll">
+<nav class="navbar navbar-toggleable-md ">
   <div class="container">
-    <div class="row">
-      <div class="logo-wrap col-md-3 col-xs-6">
-        <a href="/">
-          <img src="/assets/logo.png" alt="Empire Park Community League">
-        </a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <a href="/" class="navbar-brand">
+      <img src="/assets/logo.png" alt="Empire Park Community League">
+    </a>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="/programs">Programs</a>
+        <a class="nav-item nav-link" href="/volunteers">Volunteers</a>
+        <a class="nav-item nav-link" href="/membership">Membership</a>
       </div>
-      <div class="menu-wrap col-md-8 ">
-        <ul class="menu">
-          <li>
-            <a href="/programs">Programs</a>
-          </li>
-          <li>
-            <a href="/volunteers">Volunteers</a>
-          </li>
-          <li>
-            Membership
-          </li>
-
-          <li>
-            <span>Rentals</span>
-            <ul class="submenu">
-              <li>
-                <a href="link1.html">Link 1</a>
-              </li>
-              <li>
-                <a href="link2.html">Link 2</a>
-              </li>
-              <li>
-                <a href="link3.html" class="active">Link 3</a>
-              </li>
-            </ul>
-          </li>
-
-        </ul>
-      </div>
-      {{!-- <div class="col-md-1 col-xs-6">
-        <div id="menu-toggle">
-          <i class="fa fa-bars"></i>
-        </div>
-
-
-        <div id="search-toggle">
-          <i class="fa fa-search"></i>
-        </div>
-      </div> --}}
     </div>
   </div>
 </nav>
