--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,15 @@
 {% include top.html %}
 
-  <body>
-    
+  <body class="home-page">
+
     {% include header.html %}
-    
+
     <main class="site-content">
       {{ content }}
     </main>
-    
+
     {% include footer.html %}
     {% include anchor_links.html %}
     {% include analytics.html %}
   </body>
 </html>
-  
