--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,158 @@
 ---
 layout: default
 ---
+
+<header class="page-header">
+
+</header>
+
+<section class="segment features">
+  <div class="container">
+    <div class="title">
+      <h2>Benefits of Membership</h2>
+      <div class="short-text">
+        <div class="sep l"></div>
+        <h5>Reasons to Join Us</h5>
+        <div class="sep r"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="card-deck-wrapper">
+        <div class="card-deck">
+
+          <div class="card">
+            <div class="card-block">
+              <div class="card-title">
+                <div class="icons">
+                  <i class="fa fa-futbol-o fa-3x icon-default" aria-hidden="true"></i>
+                  <i class="fa fa-futbol-o fa-3x icon-hover" aria-hidden="true"></i>
+                </div>
+                <h4>Access & Discounts</h4>
+              </div>
+              <p class="card-text">
+                Membership provides access to minor sports such as Soccer and Baseball along with some discounts at City of Edmonton Recreation Facilities
+              </p>
+              <a href="/membership#access-&-discounts" class="btn btn-min btn-secondary">Learn More</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <div class="card-title">
+                <div class="icons">
+                  <i class="material-icons md-3x icon-default">pool</i>
+                  <i class="material-icons md-3x icon-hover">pool</i>
+                </div>
+                <h4>Free Swimming</h4>
+              </div>
+              <p class="card-text">
+                Each membership grants users several entries into Edmonton Confederation Pool's public swim times for free. Just one more perk of being a member
+              </p>
+              <a href="/membership#free-swimming" class="btn btn-min btn-secondary">Learn More</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <div class="card-title">
+                <div class="icons">
+                  <i class="fa fa-comments-o fa-3x icon-default" aria-hidden="true"></i>
+                  <i class="fa fa-comments-o fa-3x icon-hover" aria-hidden="true"></i>
+                </div>
+                <h4>Neighourhood Decisions</h4>
+              </div>
+              <p class="card-text">
+                Community leagues are recognized by the City of Edmonton as the primary speaking body for a community. We are independent and our members help determine our priorities
+              </p>
+              <a href="/membership-neigbourhood-decisions" class="btn btn-min btn-secondary">Learn More</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <div class="card-title">
+                <div class="icons">
+                  <i class="material-icons md-3x icon-default">money_off</i>
+                  <i class="material-icons md-3x icon-hover">money_off</i>
+                </div>
+                <h4>Discounted Hall Rental</h4>
+              </div>
+              <p>
+                Need a place to hold a birthday party? We offer greatly discounted rental rates for our hall to our members
+              </p>
+              <a href="/membership#hall-rental" class="btn btn-min btn-secondary">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<div class="countdown-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 clearfix">
+        <h3 class="text">Our Next Event Will Be In</h3>
+      </div>
+      <div class="col-lg-7">
+        <div class="countdown clearfix">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="event-wrapper">
+  <div class="mask"></div>
+  <div class="container">
+    <h2>Community League Day</h2>
+    <h4>
+      <i class="fa fa-clock-o"></i>Saturday September 17, 2016 @ 1:30pm</h4>
+    <h4>
+      <i class="fa fa-map-marker"></i>
+      Empire Park Community Hall
+    </h4>
+    <p>
+      Once again we're hosting a party for Community League Day to celebrate leagues and their tireless support of
+      their neighbourhoods. We'll have non stop Pokemon lures setup at our three Pokestops along with food, games and
+      live music.
+    </p>
+    <a href="#" class="btn btn-big btn-solid">
+      <i class="fa fa-compass"></i>
+      <span>Learn More</span>
+    </a>
+  </div>
+</div>
+
+<div class="volunteers-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 info-block">
+
+
+          <h2>We Need <strong>Volunteers</strong></h2>
+          <p>
+            Empire Park is a registered non-profit that functions because of the good will and generosity of volunteers.
+            We're always on the lookout for great talent so if you or anyone you know might be interested contact us at <strong>volunteers@empirepark.ca</strong>
+          </p>
+
+          <p>
+            Remember to check back in a few weeks when we launch our volunteers posting page!
+          </p>
+          <a href="#" class="btn btn-big">
+            <i class="fa fa-heartbeat"></i>Become a Volunteer
+          </a>
+
+
+      </div>
+      <div class="col-sm-6 images-outer ">
+        <img src="/assets/img/hall.jpg" class="thumbnail">
+
+      </div>
+    </div>
+  </div>
+</div>
