--- a/_sass/main/layouts/_module.scss
+++ b/_sass/main/layouts/_module.scss
@@ -1,6 +1,5 @@
 // Layouts Module
 //
 // Styling for larger layout components used on multiple pages eg: nav, footer, header etc.
-@import 'masthead';
+// @import 'masthead';
 @import 'footer';
-@import 'home';
