--- a/_sass/main/elements/_segment.scss
+++ b/_sass/main/elements/_segment.scss
@@ -4,6 +4,10 @@
   background: $body-bg;
 }
 
+.segment-nopadding {
+  padding: 0px;
+}
+
 .segment .title {
   text-align: center;
   margin-bottom: 2em;
