--- a/_sass/main/views/_programs.scss
+++ b/_sass/main/views/_programs.scss
@@ -1,3 +1,186 @@
 .programs-breadcrumbs-bar {
     margin-top: 4rem;
 }
+
+.programs {
+  @include make-row();
+
+  .heading {
+    @include make-col-ready();
+    @include media-breakpoint-up(xs) {
+      @include make-col(12);
+    }
+
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+}
+
+.program-fullscreen {
+  @include make-col-ready();
+
+  @include media-breakpoint-up(lg) {
+    @include make-col(6);
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  @include media-breakpoint-down(md) {
+    @include make-col(12);
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
+
+.program-contained {
+  @include make-col-ready();
+  @include media-breakpoint-up(xs) {
+    @include make-col(12);
+  }
+}
+
+.program {
+  overflow: hidden;
+  color: $black;
+  text-align: center;
+  background-color: $white;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+
+  a {
+
+    @include media-breakpoint-only(xl) {
+      height: 20rem;
+      padding: 4rem 8rem;
+    }
+
+    @include media-breakpoint-only(lg) {
+      height: 20rem;
+      padding: 1rem 2rem;
+    }
+
+
+    @include media-breakpoint-only(md) {
+      height: 15rem;
+      padding: 2rem 8rem;
+    }
+
+    @include media-breakpoint-only(sm) {
+      height: 18rem;
+      padding: 2rem;
+    }
+
+    @include media-breakpoint-only(xs) {
+      height: 25rem;
+      padding: 2rem;
+    }
+
+    position: relative;
+    display: block;
+
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+      outline: none;
+    }
+
+    &:hover
+    .background {
+      opacity: .2;
+      transform: scale3d(1.05, 1.05, 1);
+    }
+  }
+
+  h3 {
+    color: $white;
+  }
+
+  p {
+    color: $white;
+  }
+
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: $zindex-background;
+    display: block;
+    opacity: .1;
+    transition-duration: 900ms;
+    transition-property: transform, opacity;
+  }
+
+  .summary {
+    position: relative;
+    z-index: $zindex-foreground;
+
+    @include media-breakpoint-up(md) {
+      padding-right: 0;
+      padding-left: 0;
+    }
+
+    @include media-breakpoint-down(sm) {
+      padding-right: 0;
+      padding-left: 0;
+    }
+  }
+}
+
+
+.program-article {
+  @include make-row();
+  margin-top: 1rem;
+  margin-bottom: 15rem;
+}
+
+.program-body {
+  @include make-col-ready();
+  @include media-breakpoint-up(md) {
+    @include make-col(7);
+  }
+  @include media-breakpoint-down(sm) {
+    @include make-col(12);
+  }
+
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    text-transform: uppercase;
+    color: $body-color;
+    font-weight: $headings-font-weight-heavy;
+  }
+
+  h2,
+  h3,
+  h4 {
+    margin-top: $headings-margin-top;
+  }
+
+  h2 {
+    font-size: $font-size-h5;
+  }
+
+  h3,
+  h4 {
+    font-size: $font-size-h6;
+  }
+}
+
+.program-details {
+  @include make-col-ready();
+  @include media-breakpoint-up(md) {
+    @include make-col-offset(1);
+    @include make-col(4);
+  }
+  @include media-breakpoint-down(sm) {
+    @include make-col(12);
+  }
+
+  margin-top: 1rem;
+}
