--- a/_sass/main/elements/_module.scss
+++ b/_sass/main/elements/_module.scss
@@ -10,7 +10,7 @@
 @import 'segment';
 @import 'material-icons';
 @import 'social-media';
-@import 'seperators';
 @import 'volunteer-positions';
 @import 'page-banner';
 @import 'image_mask';
+@import 'movie-night';
