--- a/_sass/main/elements/_segment.scss
+++ b/_sass/main/elements/_segment.scss
@@ -1,16 +1,19 @@
 .segment {
-  min-height: 520px;
-  padding: 100px 0 105px;
-  background: $body-bg;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: $body-bg;
 }
 
 .segment-nopadding {
-  padding: 0px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.segment .title {
+.segment-title {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
   text-align: center;
-  margin-bottom: 2em;
+
   h2 {
     text-transform: uppercase;
     color: $body-color;
@@ -18,33 +21,27 @@
     font-weight: $headings-font-weight-heavy;
     font-size: $font-size-xl;
   }
-  h5 {
-    display: inline-block;
-    position: relative;
-    z-index: 8888;
-    padding: 0 15px;
+  p {
     font-size: 16px;
     color: $body-color-alt;
     font-size: $font-size-base;
   }
-}
 
-.short-text {
-  display: inline-block;
-  position: relative;
-  .sep {
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    height: 1px;
-    width: 22px;
-    background: $brand-primary;
-    z-index: 1;
-    &.l {
-      left: -25px;
-    }
-    &.r {
-      right: -25px;
+  .short-lead {
+    .sep {
+      display: inline-block;
+      position: relative;
+      top: -4px;
+      height: 1px;
+      width: 22px;
+      background: $brand-primary;
+      z-index: 1;
+      &.l {
+        margin-right: 10px;
+      }
+      &.r {
+        margin-left: 10px;
+      }
     }
   }
 }
