--- a/_sass/main/views/_programs.scss
+++ b/_sass/main/views/_programs.scss
@@ -2,6 +2,22 @@
     margin-top: 4rem;
 }
 
+.programs-masthead {
+  background: repeat-x center;
+  background-size: cover;
+  height: 450px;
+}
+
+.program-title {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: $body-bg;
+  position: relative;
+  top: 20rem;
+
+}
+
+
 .programs {
   @include make-row();
 
@@ -106,7 +122,15 @@
   .background {
     position: absolute;
     top: 0;
+    bottom: 0;
     left: 0;
+    right: 0;
+    width: 100%;
+    // height: 100%;
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
     z-index: $zindex-background;
     display: block;
     opacity: .1;
@@ -133,8 +157,8 @@
 
 .program-article {
   @include make-row();
-  margin-top: 1rem;
-  margin-bottom: 15rem;
+  margin-bottom: 5rem;
+
 }
 
 .program-body {
@@ -146,6 +170,7 @@
     @include make-col(12);
   }
 
+  padding-top: 3rem;
 
   h1,
   h2,
@@ -170,6 +195,11 @@
   h4 {
     font-size: $font-size-h6;
   }
+
+  hr {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
 }
 
 .program-details {
@@ -183,4 +213,11 @@
   }
 
   margin-top: 1rem;
+}
+
+.jumbotron-program {
+  // // background-size: cover;
+  // background-position: top;
+  // background-repeat: no-repeat;
+  // background-size: 100% 30rem;
 }
