Swath of changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,6 +52,7 @@
       </div>
 
       <div class="info-group-sm quick-links">
+        {% comment %}
         <h2>Quick Links</h2>
         <a href="#">
           <i class="fa fa-angle-double-right"></i>About Us
@@ -74,6 +75,7 @@
         <a href="#">
           <i class="fa fa-angle-double-right"></i>Privacy Policy
         </a>
+        {% endcomment %}
       </div>
 
       <div class="info-group-lg subscribe">
