--- a/_layouts/programs.html
+++ b/_layouts/programs.html
@@ -15,11 +15,13 @@ layout: default
 
   </div>
 </div>
-  {{!-- <div style="background-color: #84c2ff; width: 100%; padding: 1rem;">
+  {% comment %}
+   <div style="background-color: #84c2ff; width: 100%; padding: 1rem;">
       <div class="container">
         HOME >> PROGROGRAMS >> YOGA
       </div>
-  </div> --}}
+    </div>
+   {% endcomment %}
 
   <div class="container">
     <article class="program-article" style="background-color: #fff;">
