--- a/_includes/primary_nav.html
+++ b/_includes/primary_nav.html
@@ -27,7 +27,7 @@
             {% assign active_class = 'active' %}
           {% endif %}
 
-          <a class="nav-item nav-link {{active_class}}" href="{{ domain }}{{ site.baseurl }}{{ link.url }}"{% if link.url contains 'http' %} target="_blank"{% endif %}>
+          <a class="nav-item nav-link {{active_class}}" href="{{ site.baseurl }}{{ link.url }}"{% if link.url contains 'http' %} target="_blank"{% endif %}>
             {{ link.title | escape }}
           </a>
         {% endfor %}
